# cryojax-ensemble-optimization

./: .gitignore  .pre-commit-config.yaml  .pyproject.toml.kate-swp  LICENSE  README.md  README.rst  example.ipynb  mypy.ini  pyproject.toml  square_model_libtest.ipynb
.github/workflows/: testing.yaml
cryo_md/: main.py  utils_tmp.py  workflow.py
cryo_md/image/: image.py  image_stack.py  noise_estimation.py
cryo_md/likelihood/: calc_lklhood.py
cryo_md/molecular_dynamics/: md_sampling.py  md_utils.py  mdcg_sampling.py
cryo_md/optimization/: optimizer.py
cryo_md/pipeline/: pipeline.py
cryo_md/utils/: data_readers.py  parser.py
cryo_md/wpa_simulator/: rotation.py  simulator.py
src/cryo_md/: __init__.py  analysis.py  command_line.py  cryomd_version.py  data_generator.py  lklhood_and_grads.py  main.py  md_engine.py  optimizer.py  pipeline.py  utils.py
src/cryo_md/_commands/: generate_data.py  run_cryomd.py
src/cryo_md/_data/: gemmi_utils.py  output_manager.py  particle_dataloader.py  pdb.py  utils.py
src/cryo_md/_data/_io_validators/: validate_generation_config.py  validate_optimization_config.py  validator_utils.py
src/cryo_md/_molecular_dynamics/: md_utils.py  mdaa_simulator.py  mdcg_simulator.py
src/cryo_md/_optimization/: loss_and_gradients.py  optimizer.py
src/cryo_md/_simulator/: noise_utils.py  rotation.py  simulator.py  starfile_generator.py
src/cryo_md/commands/: generate_data.py  run_cryomd.py
src/cryo_md/data/: _atomic_model_loaders.py  _output_manager.py  _pdb.py
src/cryo_md/data/_config_readers/: __init__.py  generator_config_reader.py  optimizer_config_reader.py
src/cryo_md/image/: image.py  image_stack.py
src/cryo_md/likelihood/: calc_lklhood.py  simulator_for_lklhood.py
src/cryo_md/molecular_dynamics/: __init__.py  md_sampling.py  md_utils.py  mdaa_simulator.py
src/cryo_md/optimization/: __init__.py  loss_and_gradients.py  optimizers.py
src/cryo_md/pipeline/: pipeline.py
src/cryo_md/simulator/: __init__.py  _dataset_generator.py  _distributions.py  _noise_utils.py
src/cryo_md/utils/: output_manager.py  parser.py
src/cryo_md/wpa_simulator/: ctf.py  noise.py  projection.py  rotation.py  simulator.py
src/cryojax_ensemble_opt/: .command_line.py.kate-swp  command_line.py  cryojax_ensemble_opt_version.py
src/cryojax_ensemble_opt/commands/: run_ensemble_optimization.py
src/cryojax_ensemble_opt/data/: __init__.py  _datasets_and_dataloaders.py
src/cryojax_ensemble_opt/ensemble_optimization/_likelihood_optimization/: __init__.py  loss_functions.py  optimizers.py
src/cryojax_ensemble_opt/ensemble_optimization/_pipelines/: __init__.py  pipeline_with_openmm.py
src/cryojax_ensemble_opt/internal/: _config_validators.py
src/cryojax_ensemble_opt/io/: _atomic_model_reader.py  _atomic_potential_reader.py
src/cryojax_ensemble_opt/simulator/: __init__.py  _image_rendering.py
src/cryojax_ensemble_optimization/: __init__.py  _custom_types.py  command_line.py  cryojax_ensemble_opt_version.py  cryojax_ensemble_optimization_version.py  cryojax_ensemble_optimizationimization_version.py  parametrize_rna_bases.py  structural_hamiltonian.py  utils.py
src/cryojax_ensemble_optimization/commands/: generate_data.py  run_ensemble_optimization.py
src/cryojax_ensemble_optimization/config_files/: config_coarse_grain.yaml  config_structural_hamiltonian.yaml
src/cryojax_ensemble_optimization/data/: __init__.py  _datasets_and_dataloaders.py  _relion_data_generator.py
src/cryojax_ensemble_optimization/ensemble_optimization/: __init__.py
src/cryojax_ensemble_optimization/ensemble_optimization/_likelihood_optimization/: loss_functions.py  optimizers.py
src/cryojax_ensemble_optimization/ensemble_optimization/_pipelines/: base_pipeline.py  pipeline_with_openmm.py
src/cryojax_ensemble_optimization/ensemble_optimization/_pose_search/: __init__.py  base.py  geometry.py  healjax.py
src/cryojax_ensemble_optimization/ensemble_optimization/_prior_projection/: __init__.py
src/cryojax_ensemble_optimization/internal/: _config_validators.py
src/cryojax_ensemble_optimization/io/: _atomic_model_reader.py  _atomic_potential_reader.py
src/cryojax_ensemble_optimization/simulator/: _image_rendering.py
src/cryojax_ensemble_refinement/: __init__.py  _custom_types.py  command_line.py  cryojax_ensemble_refinement_version.py  pipeline.py  utils.py
src/cryojax_ensemble_refinement/_commands/: generate_data.py  run_cryomd.py
src/cryojax_ensemble_refinement/commands/: generate_data.py  run_cryomd.py  run_ensemble_refinement.py
src/cryojax_ensemble_refinement/data/: __init__.py  _atomic_model_loaders.py  _datasets_and_dataloaders.py  _output_manager.py  _pdb.py  _relion_data_generator.py
src/cryojax_ensemble_refinement/data/_config_readers/: __init__.py  generator_config_reader.py  optimizer_config_reader.py
src/cryojax_ensemble_refinement/ensemble_refinement/: __init__.py  _pipeline_with_openmm.py  base_pipeline.py
src/cryojax_ensemble_refinement/ensemble_refinement/_likelihood_optimization/: __init__.py  base_optimizer.py  loss_functions.py  optimizers.py
src/cryojax_ensemble_refinement/ensemble_refinement/_pipelines/: __init__.py  base_pipeline.py  (+1 more)
src/cryojax_ensemble_refinement/internal/: __init__.py  _config_validators.py
src/cryojax_ensemble_refinement/io/: __init__.py  _atomic_model_reader.py
src/cryojax_ensemble_refinement/likelihood_optimization/: __init__.py  base_optimizer.py  deprc_loss_and_gradients.py  deprc_optimizers.py  loss_functions.py  optimizers.py
src/cryojax_ensemble_refinement/prior_projection/: __init__.py  base_prior_projector.py
src/cryojax_ensemble_refinement/simulator/: __init__.py  _dataset_generator.py  _distributions.py  _image_rendering.py  _noise_utils.py  _utils.py
tests/: test_pose_search.py  tests.py
tutorial/: .gitignore  testing.ipynb  tutorial.ipynb
tutorial/data_generation/: config_data_geneation.yaml  config_data_generation.yaml  generate_and_visualize_data.ipynb  visualize_data.ipynb
tutorial/ensemble_optimization/: ensemble_optimization_config.yaml  running_the_optimization.ipynb
(+22 files in other folders)
